update car/search