@@ -2,6 +2,7 @@ package com.example.car_sale.service;
 
 import com.example.car_sale.dto.CarDto;
 import com.example.car_sale.dto.CarSearchCriteria;
+import com.example.car_sale.dto.ImagesDto;
 import com.example.car_sale.dto.PageDto;
 import com.example.car_sale.entity.Car;
 import com.example.car_sale.mapper.CarMapper;
@@ -11,10 +12,18 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Base64;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,8 +31,9 @@ public class SearchService {
     private final CarRepository carRepository;
     private final CarMapper carMapper;
 
+
     public PageDto<CarDto> getCarsSearch(CarSearchCriteria criteria, int page, int size) {
-        Pageable pageable = PageRequest.of(page - 1, size);
+        Pageable pageable = PageRequest.of(page - 1, size, Sort.by("orderNumber"));
 
         Specification<Car> specification = Specification.where(CarSpecifications.hasMake(criteria.getMake()))
                 .and(CarSpecifications.hasModel(criteria.getModel()))
@@ -39,16 +49,24 @@ public class SearchService {
         Page<Car> carPage = carRepository.findAll(specification, pageable);
 
         List<CarDto> carDtoList = carPage.getContent().stream()
-                .map(carMapper::toDto)
-                .peek(carDto -> {
-                    if (!carDto.getImages().isEmpty()) {
-                        System.out.println("First image: " + carDto.getImages().get(0).getImage());
-                    } else {
-                        System.out.println("No images available for car ID: " + carDto.getId());
+                .map(car -> {
+                    CarDto dto = carMapper.toDto(car);
+                    if (!dto.getImages().isEmpty()) {
+                        ImagesDto firstImage = dto.getImages().get(0);
+                        try {
+                            Path path = Paths.get(firstImage.getFilePath());
+                            byte[] imageBytes = Files.readAllBytes(path); // Read image as byte array
+                            String base64Image = Base64.getEncoder().encodeToString(imageBytes);
+                            dto.setFirstImage(base64Image); // Assuming you add this field in CarDto
+                        } catch (IOException e) {
+                            throw new UncheckedIOException("Failed to read image file", e);
+                        }
                     }
+                    return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         return new PageDto<>(carPage.getNumber() + 1, carPage.getSize(), carPage.getTotalElements(), carDtoList);
     }
+
 }
